# tin-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  rust.yml
examples/: particles.rs
src/: Tin.rs  TinApp.rs  app.rs  brush.rs  calculation.rs  color.rs  context.rs  controller.rs  datetime.rs  draw.rs  easing.rs  event.rs  font.rs  frame.rs  image.rs  key.rs  lib.rs  main.rs  noise.rs  point.rs  random.rs  scene.rs  shapes.rs  stopwatch.rs  tests.rs  text.rs  vector2.rs  vertex.rs  view.rs
src/Tin/: Calculation.rs  DateAndTime.rs  Easing.rs  ImprovedNoise.rs  LuminanceRenderer.rs  TColor.rs  TController.rs  TFont.rs  TFrame.rs  TImage.rs  TPoint.rs  TRandom.rs  TScene.rs  TShapes.rs  TStopwatch.rs  TVector2.rs  TVertex.rs  TView.rs
src/backends/: backends.rs  luminance.rs  nannou.rs
src/backends/luminance/: arc.rs  ellipse.rs  image.rs  line.rs  path.rs  rect.rs  state.rs  text.rs  triangle.rs
src/backends/nannou/: arc.rs  ellipse.rs  image.rs  line.rs  path.rs  rect.rs  state.rs  text.rs  triangle.rs
src/backends/shaders/: fragmentshader.glsl  vertexshader.glsl
src/shapes/: arc.rs  ellipse.rs  line.rs  path.rs  rect.rs  triangle.rs
src/tests/: calculation.rs  color.rs  vector2.rs
