[package]
name = "tin-rs"
version = "0.1.1"
authors = ["Vincent Robert Weis <vrobweis@gmail.com>"]
edition = "2018"

[lib]
name = "tin"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[example]]
name = "triangle_particles"
path = "examples/particles.rs"


[dependencies]
# Used for backends
nannou = "0.16.0"
luminance = "0.43.2"
luminance-front = "0.3.1"
luminance-glfw = "0.15"
luminance-gl = "0.16.1"
luminance-glutin = "0.11.3"
luminance-windowing = "0.9"
luminance-derive = "0.6"
glfw = "0.41"
glutin = "0.26"

# Used for features
image = "0.23.14"
chrono = "0.4"
font-kit = {version = "0.10.0", features = ["loader-freetype"] } 
rand = "0.8.3"

# Used for global state
lazy_static = "1.4.0"

# Used for testing
assert_approx_eq = "1.1.0"