[package]
name = "tin-rs"
version = "0.1.2"
authors = ["Vincent Robert Weis <vrobweis@gmail.com>"]
edition = "2018"

[lib]
name = "tin"
path = "src/lib.rs"

[[example]]
name = "particles"
path = "examples/particles.rs"
crate-type = ["bin"]
required-features = ["default", "random"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Used for backends
nannou = {version = "0.16.0", optional = true}
luminance = {version = "0.43.2", optional = true}
luminance-front = {version = "0.3.1", optional = true}
luminance-glfw = {version = "0.15", optional = true}
luminance-gl = {version = "0.16.1", optional = true}
luminance-glutin = {version = "0.11.3", optional = true}
luminance-windowing = {version = "0.9", optional = true}
luminance-derive = {version = "0.6", optional = true}
glfw = {version = "0.41", optional = true}
glutin = {version =  "0.26", optional = true}

# Used for features
image = {version = "0.23.14", optional = true}
chrono = {version = "0.4", optional = true}
font-kit = {version = "0.10.0", features = ["loader-freetype"], optional = true }
luminance-glyph = {version = "0.2.0", optional = true}
rand = {version = "0.8.3", optional = true}

# Used for lazily evaluated global delegate
lazy_static = "1.4.0"

# Used for testing
assert_approx_eq = "1.1.0"

[features]
random = ["rand"]
text = ["font-kit", "luminance-glyph"]
luminance_backend = ["luminance", "luminance-front", "luminance-glfw", "luminance-gl", "luminance-glutin", "luminance-windowing", "luminance-derive", "glfw", "glutin"]
time = ["chrono"]
default = ["random", "time", "nannou"]
